syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "MailData.proto";

// CmdId: 1431
// EnetChannelId: 0
// EnetIsReliable: true
message MailChangeNotify {
	repeated MailData mail_list = 3;
	repeated uint32 del_mail_id_list = 7;
}
